--- a/.gitignore
+++ b/.gitignore
@@ -23,12 +23,13 @@
 hs_err_pid*
 replay_pid*
 
-#eclipse config files
+# eclipse config files
 .project
 .classpath
-resources/app.properties
-target/classes/META-INF/maven/memex-gui-insert/memex-gui-insert/pom.properties
-target/classes/META-INF/MANIFEST.MF
 .settings/org.eclipse.jdt.core.prefs
 .settings/org.eclipse.m2e.core.prefs
-resources/app.properties
+
+# maven
+target/
+ 
+
